# chloride

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  cfg.yaml
.github/workflows/: build-and-release.yml  ci.yml  test-installer.yml
installer/: WIX_COMPATIBILITY.md  build-installer.bat  build-installer.ps1  chloride.wxs  license.rtf  test-wix.ps1
installer/nsis/: chloride-cli.nsi
src/: api.rs  app.rs  commands.rs  config.rs  main.rs  regenerate.rs  tui.rs  ui.rs  upload.rs
