[package]
name = "chloride"
version = "0.1.0"
edition = "2024"
authors = ["Chloride Team"]
description = "A simple file management CLI tool"
license = "MIT"
repository = "https://github.com/chloride-team/chloride"
keywords = ["cli", "file-management", "utility"]
categories = ["command-line-utilities"]

[[bin]]
name = "chloride"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"

[dependencies]
clap = { version = "4.5.38", features = ["derive","cargo"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", features = ["full"] }
