[package]
name = "chloride-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
ratatui = "0.30.2"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-channel = "2"
crossterm = "0.29"
